[gd_scene load_steps=10 format=3 uid="uid://b10myich688dv"]

[ext_resource type="Script" path="res://ui/gameUi.gd" id="1_7aaep"]
[ext_resource type="Texture2D" uid="uid://bwnplfdw0c6n4" path="res://addons/Tiny swords/UI/Banners/Banner_Horizontal.png" id="1_hq1qr"]
[ext_resource type="FontFile" uid="uid://cgesryr8t1odd" path="res://addons/Tiny swords/Resources/Resources/press-start-2p/PressStart2P-Regular.ttf" id="3_13hh4"]
[ext_resource type="Texture2D" uid="uid://bn18lkgejn4hn" path="res://addons/Tiny swords/Resources/Resources/M_Idle_(NoShadow).png" id="4_t5rtv"]
[ext_resource type="Texture2D" uid="uid://dt3e03u84wtes" path="res://addons/Tiny swords/Resources/Resources/G_Idle_(NoShadow).png" id="5_i03y3"]

[sub_resource type="LabelSettings" id="LabelSettings_5k4h0"]
font = ExtResource("3_13hh4")
font_size = 29
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dcpqs"]
texture = ExtResource("1_hq1qr")
texture_margin_left = 32.0
texture_margin_top = 16.0
texture_margin_right = 32.0
texture_margin_bottom = 40.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(32, 48, 128, 120)

[sub_resource type="LabelSettings" id="LabelSettings_p45j5"]
line_spacing = 5.0
font = ExtResource("3_13hh4")
font_size = 29
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbxly"]
atlas = ExtResource("4_t5rtv")
region = Rect2(40, 48, 56, 56)

[node name="gameUi" type="CanvasLayer"]
script = ExtResource("1_7aaep")

[node name="timerLabel" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_top = 33.0
offset_right = 64.0
offset_bottom = 65.0
grow_horizontal = 2
text = "8:30"
label_settings = SubResource("LabelSettings_5k4h0")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -341.0
offset_top = 14.0
offset_right = -20.0
offset_bottom = 105.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_dcpqs")

[node name="meatLabel" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.5
offset_top = -26.5
offset_right = 27.5
offset_bottom = 5.5
grow_horizontal = 2
grow_vertical = 2
text = "50 "
label_settings = SubResource("LabelSettings_p45j5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="moneyLabel" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 60.5
offset_top = -26.5
offset_right = 156.5
offset_bottom = 5.5
grow_horizontal = 2
grow_vertical = 2
text = "50 "
label_settings = SubResource("LabelSettings_p45j5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_left = 35.0
offset_top = 6.0
offset_right = 141.0
offset_bottom = 112.0
scale = Vector2(0.5, 0.5)
texture = SubResource("AtlasTexture_dbxly")

[node name="TextureRect2" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_left = 123.0
offset_top = -41.0
offset_right = 377.0
offset_bottom = 213.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_i03y3")
